# gravity-sim

./: .gitignore  CMakeLists.txt  README.md  TODO.md  gravity-sim.sublime-workspace  imgui.ini
include/glad/: glad.h
saves/: solarSystem.sim  testing.sim
shaders/: path.frag  path.vert  postProcessingShader.frag  shader.frag  shader.vert  starShader.frag  starShader.vert  trailShader.frag  trailShader.vert
src/: Body.cpp  Body.hpp  Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  glad.c  main.cpp
src/models/: Sphere.cpp  Sphere.hpp
